--- a/src/modes/CMakeLists.txt
+++ b/src/modes/CMakeLists.txt
@@ -1,10 +1,10 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.14)
 
 # Название проекта
-project(fourier)
+project(modes)
 
 # Установка переменной со списком исходников
-set(SOURCE_LIB fourier.cpp)
+set(SOURCE_LIB modes.cpp)
 
 # Создание статической библиотеки
-add_library(fourier STATIC ${SOURCE_LIB})
+add_library(modes STATIC ${SOURCE_LIB})
