tabulate lib used to pretty print tables

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -3,21 +3,21 @@ cmake_minimum_required(VERSION 3.14)
 # Название проекта
 project(benchmark)
 
-# include_directories(../src/number)
+# fix build with export LANG=C export LC_ALL=C
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
-# search for static library number
-# find_library(NUMBER_LIB number ../src/number)
+FetchContent_Declare(tabulate
+    GIT_REPOSITORY https://github.com/p-ranav/tabulate
+    # GIT_TAG v3.11.2
+)
 
-# include target number
-
-
-
-# add library ../src/number
-# add_subdirectory(../src/number number)
-
-# add library ../src/number
-# add_subdirectory(../src/number number)
+# Добавляем библиотеку
+FetchContent_MakeAvailable(tabulate)
 
 # Создаем исполняемый файл
 add_executable(benchmark benchmark.cpp)
-target_link_libraries(benchmark PUBLIC number fourier)
+
+# Связываем исполняемый файл с библиотеками
+target_link_libraries(benchmark PUBLIC number fourier tabulate)
