--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,20 @@
 project(tests)
 
+include(FetchContent)
+
+FetchContent_Declare(
+  Catch2
+  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+  GIT_TAG        v3.0.1 # or a later release
+)
+
+FetchContent_MakeAvailable(Catch2)
+
+include(CTest)
+include(Catch)
+
 add_executable(tests tests.cpp)
+target_link_libraries(tests PRIVATE Catch2::Catch2WithMain number fourier)
 
-target_link_libraries(tests number fourier)
-
-add_test(NAME tests COMMAND tests)
+# discover tests
+catch_discover_tests(tests)
