--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ enable_testing()
 
 # добавление подпроектов
 add_subdirectory(src)
-add_subdirectory(test)
+add_subdirectory(tests)
 
 # Создает исполняемый файл с именем coursework
 add_executable(multiplier src/main.cpp)
